--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
     color: white;
     border-bottom: 6px solid #07004d;
     border-radius: 10px;
+    text-shadow: 5px 5px 2px black;
         
     /*
     Challenge:
